                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 14-12-2005 fixed: Sliding dialogs didn't reverse their direction correctly when hidden early.
 - 14-12-2005 added: Keyboard SetHeading patch thans to Nuka1195
 - 14-12-2005 fixed: allowhiddenfocus wasn't working correctly.
 - 14-12-2005 fixed: Very small image's thumbs would crash.  Minimum is now 8x8 pixels.
 - 13-12-2005 fixed: DVD Folders weren't being stacked.
 - 13-12-2005 fixed: Buttonscroller backwards compatibility for v1.3 skins.
 - 13-12-2005 changed: timers for effects are started at render time, rather than at window creation.
 - 13-12-2005 fixed: selecting unrarred vobsubs using browse for subtitle.
 - 13-12-2005 fixed: auto game region would apply even with setting off in some cases.
 - 12-12-2005 added: allowHiddenFocus attribute to visibility tags.  See online manual for more info.
 - 12-12-2005 fixed: Music Library could report empty if it had already been visited before a scan was performed.
 - 11-12-2005 fixed: The All Songs item in Music Library
 - 11-12-2005 changed: All Albums in Top 100 Albums, Recently Added Albums, Recently Played Albums is now a nested sql query for better performance
 - 11-12-2005 changed: Moved the buttonscroller button list into the skin.  See online manual for more information.  It still reads
                       from XboxMediaCenter.xml if skin version is less than 1.8.
 - 11-12-2005 added: Initial support for skin version 2.0 and backwards compatibility to v1.3 skins (skinners please see graphical design
                     forum for information).
 - 11-12-2005 fixed: Workaround for a buffer overrun in DVDDemuxSPU.